--- a/app/views/restaurants/_detail-card.html.haml
+++ b/app/views/restaurants/_detail-card.html.haml
@@ -1,6 +1,6 @@
 .card.w-75.p-2.mx-auto.mb-5
   .card-body.px-5
-    %h1.display-2.text-center
+    %h1#font-size-20.text-center
       = @restaurant.name
     .text-center
       = image_tag "#{@restaurant.images.first.url}"
