--- a/app/views/restaurants/_comment-form.html.haml
+++ b/app/views/restaurants/_comment-form.html.haml
@@ -7,4 +7,4 @@
       %label 感想
       = f.text_area :content, class: 'form-control'
     .actions
-      = f.submit "登録する", class: 'btn btn-dark'
+      = f.submit "コメントする", class: 'btn btn-dark'
